--- a/src/main/webapp/i18n/pl/pools.json
+++ b/src/main/webapp/i18n/pl/pools.json
@@ -6,8 +6,17 @@
                 "name": "Nazwa",
                 "size": "Rozmiar",
                 "enabled": "Włączone",
-                "tools": "Narzędzia"
+                "tools": "Narzędzia",
+                "book": "Zarezerwuj"
             }
+        },
+        "booking": {
+            "title": "Zarezerwuj pulę",
+            "fields": {
+                "id": "ID",
+                "count": "Ilość"
+            },
+            "minvalue": "Wartość musi być większa niż 0"
         }
     }
 }
