--- a/src/main/webapp/i18n/en/pools.json
+++ b/src/main/webapp/i18n/en/pools.json
@@ -16,8 +16,12 @@
                 "id": "ID",
                 "count": "Count",
                 "tools": "Additional tools"
+                "from": "From",
+                "to": "To"
             },
-            "minvalue": "Value should be greater than 0"
+            "minvalue": "Value should be greater than 0",
+            "from-err": "from date not defined",
+            "to-err": "to date not defined"
         }
     }
 }
