--- a/src/main/webapp/i18n/pl/pools.json
+++ b/src/main/webapp/i18n/pl/pools.json
@@ -16,8 +16,12 @@
                 "id": "ID",
                 "count": "Ilość",
                 "tools": "Dodatkowe narzędzia"
+                "from": "od",
+                "to": "do"
             },
-            "minvalue": "Wartość musi być większa niż 0"
+            "minvalue": "Wartość musi być większa niż 0",
+            "from-err": "Data początkowa niezdefiniowana",
+            "to-err": "Data końcowa niezdefiniowana"
         }
     }
 }
