SNOR-30 Additional tools request

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,3 +19,9 @@ email.reset.title=Snorlax password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your Snorlax account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+
+# Request tools email
+email.request.title=Snorlax request tools
+email.request.introduction=User {0} requested additional tools
+email.request.text1=Pool ID: {0}
+email.request.text2=Additional tools user requested: {0}
