--- a/src/main/webapp/i18n/pl/pools.json
+++ b/src/main/webapp/i18n/pl/pools.json
@@ -14,7 +14,8 @@
             "title": "Zarezerwuj pulę",
             "fields": {
                 "id": "ID",
-                "count": "Ilość"
+                "count": "Ilość",
+                "tools": "Dodatkowe narzędzia"
             },
             "minvalue": "Wartość musi być większa niż 0"
         }
