--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -19,3 +19,9 @@ email.reset.title=Snorlax reset hasła
 email.reset.greeting=Drogi {0}
 email.reset.text1=Dla Twojego Snorlax konta wysłano prośbę o zresetowanie hasła, kliknij w poniższy link aby kontynuować:
 email.reset.text2=Z uszanowaniem,
+
+# Żądanie narzędzi email
+email.request.title=Snorlax żądanie narzędzi
+email.request.introduction=Użytkownik {0} żąda dodatkowych narzędzi
+email.request.text1=ID maszyny wirtualnej: {0}
+email.request.text2=Dodatkowe narzędzia, które użytkownik zażądał: {0}
