Basic upload update

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -6,6 +6,7 @@
             "pools": "Pools",
             "home": "Home",
             "upload": "Upload",
+            "diff": "Diff",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entities",
