--- a/src/main/webapp/i18n/pl/upload.json
+++ b/src/main/webapp/i18n/pl/upload.json
@@ -3,6 +3,8 @@
         "title": "Prześlij plik z pulami",
         "drop": "Upuść plik tutaj, albo",
         "name": "Nazwa pliku",
-        "upload": "Prześlij"
+        "upload": "Prześlij",
+        "save": "Zapisz",
+        "conflict": "Konflikty"
     }
 }
