--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -6,6 +6,7 @@
             "pools": "Pule",
             "home": "Strona domowa",
             "upload": "Prześlij",
+            "diff": "Porównaj",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Encje",
