Booking service tests

--- a/src/main/webapp/i18n/en/pools.json
+++ b/src/main/webapp/i18n/en/pools.json
@@ -15,7 +15,7 @@
             "fields": {
                 "id": "ID",
                 "count": "Count",
-                "tools": "Additional tools"
+                "tools": "Additional tools",
                 "from": "From",
                 "to": "To"
             },
