--- a/src/main/webapp/i18n/pl/upload.json
+++ b/src/main/webapp/i18n/pl/upload.json
@@ -4,6 +4,7 @@
         "drop": "Upuść plik tutaj, albo",
         "name": "Nazwa pliku",
         "upload": "Prześlij",
+        "forceSave": "Zapisz siłowo",
         "save": "Zapisz",
         "conflict": "Konflikty"
     }
