--- a/src/main/webapp/i18n/pl/pools.json
+++ b/src/main/webapp/i18n/pl/pools.json
@@ -14,9 +14,14 @@
             "title": "Zarezerwuj pulę",
             "fields": {
                 "id": "ID",
-                "count": "Ilość"
+                "count": "Ilość",
+                "tools": "Dodatkowe narzędzia",
+                "from": "od",
+                "to": "do"
             },
-            "minvalue": "Wartość musi być większa niż 0"
+            "minvalue": "Wartość musi być większa niż 0",
+            "from-err": "Data początkowa niezdefiniowana",
+            "to-err": "Data końcowa niezdefiniowana"
         }
     }
 }
