--- a/src/main/webapp/i18n/en/pools.json
+++ b/src/main/webapp/i18n/en/pools.json
@@ -14,9 +14,14 @@
             "title": "Book a pool",
             "fields": {
                 "id": "ID",
-                "count": "Count"
+                "count": "Count",
+                "tools": "Additional tools",
+                "from": "From",
+                "to": "To"
             },
-            "minvalue": "Value should be greater than 0"
+            "minvalue": "Value should be greater than 0",
+            "from-err": "from date not defined",
+            "to-err": "to date not defined"
         }
     }
 }
