--- a/src/main/webapp/i18n/en/upload.json
+++ b/src/main/webapp/i18n/en/upload.json
@@ -4,7 +4,10 @@
         "drop": "Drop file here or",
         "name": "Name",
         "upload": "Upload",
+        "forceSave": "Force Save",
         "save": "Save",
-        "conflict": "Conflicts"
+        "conflict": "Conflicts",
+        "upload-success": "Upload successful",
+        "upload-err": "Upload not successful, please verify file."
     }
 }
