--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -54,6 +54,10 @@
                     "link": "sign in",
                     "suffix": ", you can try the default accounts:<br/>- Administrator (login=\"admin\" and password=\"admin\") <br/>- User (login=\"user\" and password=\"user\")."
                 },
+                "login": {
+                    "click": "If you have an account, click here to ",
+                    "link": "sign in"
+                },
                 "register": {
                     "noaccount": "You don't have an account yet?",
                     "link": "Register a new account"
