--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,7 @@
 {
     "home": {
-        "title": "Welcome, Java Hipster!",
-        "subtitle": "This is your homepage",
+        "title": "Welcome to Snorlax!",
+        "subtitle": "The best PCoIP terminal management system.",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
         },
@@ -13,7 +13,7 @@
             "chat": "JHipster public chat room",
             "follow": "follow @java_hipster on Twitter"
         },
-        "like": "If you like JHipster, don't forget to give us a star on",
+        "like": "If you like Snorlax, don't forget to give us a star on",
         "github": "GitHub"
     }
 }
