--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -29,6 +29,7 @@
                 "configuration": "Configuration",
                 "logs": "Logs",
                 "audits": "Audits",
+                "statistics": "Statistics",
                 "apidocs": "API",
                 "database": "Database",
                 "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
