--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -29,6 +29,7 @@
                 "configuration": "Konfiguracja",
                 "logs": "Logi",
                 "audits": "Audyty",
+                "statistics": "Statystyki",
                 "apidocs": "API",
                 "database": "Baza danych",
                 "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
