--- a/src/main/webapp/i18n/pl/upload.json
+++ b/src/main/webapp/i18n/pl/upload.json
@@ -8,6 +8,9 @@
         "save": "Zapisz",
         "conflict": "Konflikty",
         "upload-success": "Przesyłanie pliku powiodło się",
-        "upload-err": "Przesyłanie pliku nie powiodło się, sprawdź zawartość pliku."
+        "upload-json-success": "Zapisywanie powiodło się.",
+        "upload-err": "Przesyłanie pliku nie powiodło się, sprawdź zawartość pliku.",
+        "upload-json-err": "Zapisywanie nie powiodło się.",
+        "fetch-err": "Nie udało się pobrać pul"
     }
 }
