--- a/src/main/webapp/i18n/pl/global.json
+++ b/src/main/webapp/i18n/pl/global.json
@@ -30,6 +30,7 @@
                 "logs": "Logi",
                 "audits": "Audyty",
                 "statistics": "Statystyki",
+                "reservations": "Rezerwacje",
                 "apidocs": "API",
                 "database": "Baza danych",
                 "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
